--- a/Treellenge/src/assets/aframe-ar.html
+++ b/Treellenge/src/assets/aframe-ar.html
@@ -5,8 +5,7 @@
   <body style='margin : 0px; overflow: hidden;'>
     <a-scene embedded arjs>
     <a-marker preset="hiro">
-      <a-box position="-1 0.5 0" rotation="0 45 0" color="#4CC3D9"></a-box>
-      <a-plane position="0 0 0" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
+      <a-text position="0 0 0" rotation="270 90 -90" color="blue" value="Thank you!"></a-text>
     </a-marker>
     <a-entity camera></a-entity>
     </a-scene>
